diff mapbox style, fixed points not showing on FF

--- a/src/main/resources/fare/base.css
+++ b/src/main/resources/fare/base.css
@@ -20,7 +20,6 @@ body {
 
 .station-point {
     pointer-events: none;
-    r: 2px
 }
 
 .route-line {
